fix: use the input config instead of always the reference design

--- a/04_cli.ipynb
+++ b/04_cli.ipynb
@@ -237,7 +237,7 @@
     "        sites = [\"Chile\", \"Pole\"]\n",
     "    else:\n",
     "        sites = [res.site]\n",
-    "    sim = S4RefSimTool(\"s4_reference_design.toml\", output_folder=res.output_folder)\n",
+    "    sim = S4RefSimTool(res.config, output_folder=res.output_folder)\n",
     "    sim.run(channels=res.channels, sites=sites)"
    ]
   },
