feat: log the sky configuration

--- a/01_foregrounds.ipynb
+++ b/01_foregrounds.ipynb
@@ -87,6 +87,7 @@
     "    output_map : numpy array\n",
     "        Output map with all emissions combined, uses nan for missing pixels\n",
     "    \"\"\"\n",
+    "    log.info(\"Configuration %s\", str(config_sky_emission))\n",
     "    telescope = get_telescope(channel)\n",
     "    nside = 512 if telescope == \"SAT\" else 4096\n",
     "    npix = hp.nside2npix(nside)\n",
