fix: fix looping for splits

--- a/04_cli.ipynb
+++ b/04_cli.ipynb
@@ -150,7 +150,7 @@
     "                sky_emission = load_sky_emission(\n",
     "                    self.config[\"sky_emission\"], site, channel\n",
     "                )\n",
-    "                for split in range(nsplits):\n",
+    "                for split in range(nsplits+1):\n",
     "                    output_map = load_atmosphere(\n",
     "                        self.config, site, channel, realization=split\n",
     "                    )\n",
@@ -169,7 +169,7 @@
     "                            split=max(\n",
     "                                1, split\n",
     "                            ),  # split=0 is full mission and we want 1\n",
-    "                            nsplits=nsplits,\n",
+    "                            nsplits=1 if split ==0 else nsplits,\n",
     "                        )\n",
     "                        log.info(f\"Writing {output_filename}\")\n",
     "                        hp.write_map(\n",
