fix: add site to filename

--- a/04_cli.ipynb
+++ b/04_cli.ipynb
@@ -118,7 +118,7 @@
     "        self.config_filename = config_filename\n",
     "        self.config = toml.load(self.config_filename)\n",
     "        self.output_filename_template = (\n",
-    "            \"cmbs4_{tag}_KCMB_{telescope}-{band}_nside{nside}_{split}_of_{nsplits}.fits\"\n",
+    "            \"cmbs4_{tag}_KCMB_{telescope}-{band}_{site}_nside{nside}_{split}_of_{nsplits}.fits\"\n",
     "        )\n",
     "        self.output_folder = Path(output_folder)\n",
     "        self.output_folder.mkdir(parents=True, exist_ok=True)\n",
@@ -165,6 +165,7 @@
     "                            nside=hp.npix2nside(len(output_map[0])),\n",
     "                            telescope=get_telescope(channel),\n",
     "                            band=channel,\n",
+    "                            site=site.lower(),\n",
     "                            tag=\"sky_atmosphere_noise\",\n",
     "                            split=max(\n",
     "                                1, split\n",
