feat: add channel,site,split to FITS metadata

--- a/04_cli.ipynb
+++ b/04_cli.ipynb
@@ -183,6 +183,10 @@
     "                                (\"SKY_VERS\", \"1.0\"),\n",
     "                                (\"ATM_VERS\", \"1.0\"),\n",
     "                                (\"NOI_VERS\", \"1.0\"),\n",
+    "                                (\"SITE\", site),\n",
+    "                                (\"SPLIT\", split),\n",
+    "                                (\"NSPLITS\", nsplits),\n",
+    "                                (\"CHANNEL\", channel),\n",
     "                                (\"DATE\", str(date.today())),\n",
     "                                (\"CONFMD5\", md5sum_file(self.config_filename)),\n",
     "                            ],\n",
