feat: check if files are already available

--- a/04_cli.ipynb
+++ b/04_cli.ipynb
@@ -41,6 +41,7 @@
    "source": [
     "# export\n",
     "\n",
+    "import os\n",
     "import toml\n",
     "import healpy as hp\n",
     "import numpy as np\n",
@@ -151,6 +152,22 @@
     "                    self.config[\"sky_emission\"], site, channel\n",
     "                )\n",
     "                for split in range(nsplits+1):\n",
+    "                    telescope = get_telescope(channel)\n",
+    "                    nside = 512 if telescope == \"SAT\" else 4096\n",
+    "                    output_filename = self.output_filename_template.format(\n",
+    "                            nside=nside,\n",
+    "                            telescope=telescope,\n",
+    "                            band=channel,\n",
+    "                            site=site.lower(),\n",
+    "                            tag=\"sky_atmosphere_noise\",\n",
+    "                            split=max(\n",
+    "                                1, split\n",
+    "                            ),  # split=0 is full mission and we want 1\n",
+    "                            nsplits=1 if split ==0 else nsplits,\n",
+    "                        )\n",
+    "                    if os.path.exists(self.output_folder / output_filename):\n",
+    "                        log.info(\"File %s already exists, SKIP\", output_filename)\n",
+    "                        continue\n",
     "                    output_map = load_atmosphere(\n",
     "                        self.config, site, channel, realization=split\n",
     "                    )\n",
@@ -161,17 +178,7 @@
     "                        output_map *= np.sqrt(nsplits)\n",
     "                    output_map += sky_emission\n",
     "                    if write_outputs:\n",
-    "                        output_filename = self.output_filename_template.format(\n",
-    "                            nside=hp.npix2nside(len(output_map[0])),\n",
-    "                            telescope=get_telescope(channel),\n",
-    "                            band=channel,\n",
-    "                            site=site.lower(),\n",
-    "                            tag=\"sky_atmosphere_noise\",\n",
-    "                            split=max(\n",
-    "                                1, split\n",
-    "                            ),  # split=0 is full mission and we want 1\n",
-    "                            nsplits=1 if split ==0 else nsplits,\n",
-    "                        )\n",
+    "                        \n",
     "                        log.info(f\"Writing {output_filename}\")\n",
     "                        hp.write_map(\n",
     "                            self.output_folder / output_filename,\n",
