feat: keep the dtype of the input maps

--- a/01_foregrounds.ipynb
+++ b/01_foregrounds.ipynb
@@ -104,6 +104,7 @@
     "            / f\"{realization:08d}\"\n",
     "            / f\"{site.lower()}_{emission_naming[emission]}_{telescope}_{channel}_filtered_telescope_all_time_all_bmap.fits\",\n",
     "            (0, 1, 2),\n",
+    "            dtype=None,\n",
     "            verbose=False,\n",
     "        )\n",
     "        emission_map[emission_map == hp.UNSEEN] = np.nan\n",
