--- a/02_atmosphere.ipynb
+++ b/02_atmosphere.ipynb
@@ -184,7 +184,7 @@
     "    )\n",
     "    log.info(f\"Reading {map_filename}\")\n",
     "    atmosphere_map = hp.read_map(\n",
-    "        Path(base_folder) / map_filename, (0, 1, 2), dtype=np.float32, verbose=False\n",
+    "        Path(base_folder) / map_filename, (0, 1, 2), dtype=None, verbose=False\n",
     "    )\n",
     "    atmosphere_map[atmosphere_map == hp.UNSEEN] = np.nan\n",
     "    # input map is 10 days at 100% efficiency\n",
