feat: create channel_site subfolder

--- a/04_cli.ipynb
+++ b/04_cli.ipynb
@@ -145,14 +145,18 @@
     "        ), \"We currently only have 7 independent realizations of atmosphere and noise\"\n",
     "        for site in sites:\n",
     "            for channel in parse_channels(channels):\n",
+    "  \n",
     "                if get_telecope_years(self.config, site, channel) == 0:\n",
     "                    continue\n",
+    "                telescope = get_telescope(channel)\n",
+    "                subfolder = self.output_folder / f\"{telescope}-{channel}_{site.lower()}\"\n",
+    "                subfolder.mkdir(parents=True, exist_ok=True)\n",
+    "                \n",
     "                log.info(f\"Simulate channel {channel} at {site}\")\n",
     "                sky_emission = load_sky_emission(\n",
     "                    self.config[\"sky_emission\"], site, channel\n",
     "                )\n",
     "                for split in range(nsplits+1):\n",
-    "                    telescope = get_telescope(channel)\n",
     "                    nside = 512 if telescope == \"SAT\" else 4096\n",
     "                    output_filename = self.output_filename_template.format(\n",
     "                            nside=nside,\n",
@@ -165,7 +169,7 @@
     "                            ),  # split=0 is full mission and we want 1\n",
     "                            nsplits=1 if split ==0 else nsplits,\n",
     "                        )\n",
-    "                    if os.path.exists(self.output_folder / output_filename):\n",
+    "                    if os.path.exists(subfolder / output_filename):\n",
     "                        log.info(\"File %s already exists, SKIP\", output_filename)\n",
     "                        continue\n",
     "                    output_map = load_atmosphere(\n",
@@ -181,7 +185,7 @@
     "                        \n",
     "                        log.info(f\"Writing {output_filename}\")\n",
     "                        hp.write_map(\n",
-    "                            self.output_folder / output_filename,\n",
+    "                            subfolder / output_filename,\n",
     "                            output_map,\n",
     "                            column_units=\"K_CMB\",\n",
     "                            extra_header=[\n",
