--- a/index.ipynb
+++ b/index.ipynb
@@ -89,7 +89,11 @@
     "SAT        MFLS     4\n",
     "SAT        LFS      1\n",
     "```\n",
-    "These factors should be corrected for in the *noise* maps but not in the atmospheric maps: `map_out = map_in / sqrt(thinfp)`. "
+    "These factors should be corrected for in the *noise* maps but not in the atmospheric maps: `map_out = map_in / sqrt(thinfp)`.\n",
+    "\n",
+    "More information about the noise and atmosphere simulations are available at:\n",
+    "\n",
+    "* <https://cmb-s4.org/wiki/index.php/Reference_design_simulation_tool>"
    ]
   },
   {
