style: change order of operations

--- a/02_atmosphere.ipynb
+++ b/02_atmosphere.ipynb
@@ -188,8 +188,8 @@
     "    )\n",
     "    atmosphere_map[atmosphere_map == hp.UNSEEN] = np.nan\n",
     "    # input map is 10 days at 100% efficiency\n",
-    "    atmosphere_map *= np.sqrt(10) / np.sqrt(\n",
-    "        365.25 * config[\"experiment\"][\"observing_efficiency\"]\n",
+    "    atmosphere_map *= np.sqrt(\n",
+    "        10 / 365.25 * config[\"experiment\"][\"observing_efficiency\"]\n",
     "    )\n",
     "    # pole sims have lower efficiency\n",
     "    atmosphere_map *= np.sqrt(\n",
