--- a/03_noise.ipynb
+++ b/03_noise.ipynb
@@ -247,10 +247,10 @@
     "    )\n",
     "    output_map[output_map == hp.UNSEEN] = np.nan\n",
     "    # input map is 10 days at 100% efficiency\n",
-    "    output_map *= 10 / (365.25 * config[\"experiment\"][\"observing_efficiency\"])\n",
-    "    output_map *= get_tube_years(config, site, channel)\n",
+    "    output_map *= np.sqrt(10 / (365.25 * config[\"experiment\"][\"observing_efficiency\"]))\n",
+    "    output_map /= np.sqrt(get_tube_years(config, site, channel))\n",
     "    # pole sims have lower efficiency\n",
-    "    output_map *= np.sqrt(\n",
+    "    output_map /= np.sqrt(\n",
     "        simulations_observing_efficiency[site.lower()].get(telescope, 1)\n",
     "    )\n",
     "    # focal plane thinning factor of TOD simulations\n",
