feat: replace nan with UNSEEN and black

--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -37,8 +37,10 @@
     "# export\n",
     "\n",
     "import os\n",
-    "base_folder = os.environ.get(\"S4REFSIMTOOL_INPUT\",\n",
-    "                             \"/global/cscratch1/sd/keskital/s4sim/reference_tool/out/\")"
+    "\n",
+    "base_folder = os.environ.get(\n",
+    "    \"S4REFSIMTOOL_INPUT\", \"/global/cscratch1/sd/keskital/s4sim/reference_tool/out/\"\n",
+    ")"
    ]
   },
   {
