--- a/04_cli.ipynb
+++ b/04_cli.ipynb
@@ -69,12 +69,14 @@
     "\n",
     "import hashlib\n",
     "\n",
+    "\n",
     "def md5sum_string(string):\n",
     "    return hashlib.md5(string.encode(\"utf-8\")).hexdigest()\n",
     "\n",
+    "\n",
     "def md5sum_file(filename):\n",
     "    \"\"\"Compute md5 checksum of the contents of a file\"\"\"\n",
-    "    return md5sum_string(open(filename,'r').read())"
+    "    return md5sum_string(open(filename, \"r\").read())"
    ]
   },
   {
@@ -118,9 +120,7 @@
     "        \"\"\"\n",
     "        self.config_filename = config_filename\n",
     "        self.config = toml.load(self.config_filename)\n",
-    "        self.output_filename_template = (\n",
-    "            \"cmbs4_{tag}_KCMB_{telescope}-{band}_{site}_nside{nside}_{split}_of_{nsplits}.fits\"\n",
-    "        )\n",
+    "        self.output_filename_template = \"cmbs4_{tag}_KCMB_{telescope}-{band}_{site}_nside{nside}_{split}_of_{nsplits}.fits\"\n",
     "        self.output_folder = Path(output_folder)\n",
     "        self.output_folder.mkdir(parents=True, exist_ok=True)\n",
     "\n",
@@ -145,30 +145,28 @@
     "        ), \"We currently only have 7 independent realizations of atmosphere and noise\"\n",
     "        for site in sites:\n",
     "            for channel in parse_channels(channels):\n",
-    "  \n",
+    "\n",
     "                if get_telecope_years(self.config, site, channel) == 0:\n",
     "                    continue\n",
     "                telescope = get_telescope(channel)\n",
     "                subfolder = self.output_folder / f\"{telescope}-{channel}_{site.lower()}\"\n",
     "                subfolder.mkdir(parents=True, exist_ok=True)\n",
-    "                \n",
+    "\n",
     "                log.info(f\"Simulate channel {channel} at {site}\")\n",
     "                sky_emission = load_sky_emission(\n",
     "                    self.config[\"sky_emission\"], site, channel\n",
     "                )\n",
-    "                for split in range(nsplits+1):\n",
+    "                for split in range(nsplits + 1):\n",
     "                    nside = 512 if telescope == \"SAT\" else 4096\n",
     "                    output_filename = self.output_filename_template.format(\n",
-    "                            nside=nside,\n",
-    "                            telescope=telescope,\n",
-    "                            band=channel,\n",
-    "                            site=site.lower(),\n",
-    "                            tag=\"sky_atmosphere_noise\",\n",
-    "                            split=max(\n",
-    "                                1, split\n",
-    "                            ),  # split=0 is full mission and we want 1\n",
-    "                            nsplits=1 if split ==0 else nsplits,\n",
-    "                        )\n",
+    "                        nside=nside,\n",
+    "                        telescope=telescope,\n",
+    "                        band=channel,\n",
+    "                        site=site.lower(),\n",
+    "                        tag=\"sky_atmosphere_noise\",\n",
+    "                        split=max(1, split),  # split=0 is full mission and we want 1\n",
+    "                        nsplits=1 if split == 0 else nsplits,\n",
+    "                    )\n",
     "                    if os.path.exists(subfolder / output_filename):\n",
     "                        log.info(\"File %s already exists, SKIP\", output_filename)\n",
     "                        continue\n",
@@ -181,8 +179,10 @@
     "                    if split > 0:\n",
     "                        output_map *= np.sqrt(nsplits)\n",
     "                    output_map += sky_emission\n",
+    "                    # Use UNSEEN instead of nan for missing pixels\n",
+    "                    output_map[np.isnan(output_map)] = hp.UNSEEN\n",
     "                    if write_outputs:\n",
-    "                        \n",
+    "\n",
     "                        log.info(f\"Writing {output_filename}\")\n",
     "                        hp.write_map(\n",
     "                            subfolder / output_filename,\n",
