--- a/02_atmosphere.ipynb
+++ b/02_atmosphere.ipynb
@@ -189,11 +189,9 @@
     "    atmosphere_map[atmosphere_map == hp.UNSEEN] = np.nan\n",
     "    # input map is 10 days at 100% efficiency\n",
     "    atmosphere_map *= np.sqrt(\n",
-    "        10 / (365.25 * config[\"experiment\"][\"observing_efficiency\"])\n",
-    "    )\n",
-    "    # pole sims have lower efficiency\n",
-    "    atmosphere_map /= np.sqrt(\n",
-    "        simulations_observing_efficiency[site.lower()].get(telescope, 1)\n",
+    "        10\n",
+    "        * simulations_observing_efficiency[site.lower()].get(telescope, 1)\n",
+    "        / (365.25 * config[\"experiment\"][\"observing_efficiency\"])\n",
     "    )\n",
     "    atmosphere_map /= np.sqrt(get_telecope_years(config, site, channel))\n",
     "    return atmosphere_map"
