test: improved unit tests for noise

--- a/03_noise.ipynb
+++ b/03_noise.ipynb
@@ -271,7 +271,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filenames = !ls /global/cscratch1/sd/keskital/s4sim/reference_tool/out/00000000/*noise*bmap*"
+    "filenames = !ls $base_folder/00000000/*noise*bmap*"
    ]
   },
   {
@@ -291,8 +291,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "channel = \"LFS1\"\n",
+    "channel = \"HFS1\"\n",
     "site = \"Pole\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "telescope = get_telescope(channel)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_map = hp.read_map(\n",
+    "    base_folder + \"/00000000/\" + \\\n",
+    "    f\"{site.lower()}_noise_{telescope}_{channel}_filtered_telescope_all_time_all_bmap.fits\"\n",
+    ", (0,1,2))"
    ]
   },
   {
@@ -310,7 +338,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.nanmin(output_map), np.nanmax(output_map)"
+    "output_map[np.isnan(output_map)] = hp.UNSEEN"
    ]
   },
   {
@@ -319,8 +347,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert np.nanmax(output_map) < 1e-2 and np.nanmax(output_map) > 1e-3, \\\n",
-    "    \"Amplitude check failed\""
+    "# Compare mask\n",
+    "np.testing.assert_allclose(input_map == hp.UNSEEN, output_map == hp.UNSEEN)"
    ]
   },
   {
@@ -329,8 +357,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert np.nanmin(output_map) > -1e-2 and np.nanmin(output_map) < 1e-3, \\\n",
-    "    \"Amplitude check failed\""
+    "simulations_observing_efficiency"
    ]
   },
   {
@@ -339,7 +366,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline"
+    "np.testing.assert_allclose(input_map[input_map != hp.UNSEEN] * \\\n",
+    "    np.sqrt(10 * simulations_observing_efficiency[site.lower()][telescope] / 8 / (7 * 365.25 * .2) / 4),\n",
+    "    output_map[output_map != hp.UNSEEN], rtol=1e-6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
