test: improve atmosphere unit test

--- a/02_atmosphere.ipynb
+++ b/02_atmosphere.ipynb
@@ -194,6 +194,7 @@
     "        / (365.25 * config[\"experiment\"][\"observing_efficiency\"])\n",
     "    )\n",
     "    atmosphere_map /= np.sqrt(get_telecope_years(config, site, channel))\n",
+    "\n",
     "    return atmosphere_map"
    ]
   },
@@ -212,7 +213,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filenames = !ls /global/cscratch1/sd/keskital/s4sim/reference_tool/out/00000000/*atmo*"
+    "filenames = !ls $base_folder/00000000/*atmo*"
    ]
   },
   {
@@ -232,8 +233,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "channel = \"LFS1\"\n",
-    "site = \"Pole\""
+    "channel = \"HFS1\"\n",
+    "site = \"Pole\"\n",
+    "telescope = get_telescope(channel)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_map = hp.read_map(\n",
+    "    base_folder + \"/00000000/\" + \\\n",
+    "    f\"{site.lower()}_atmosphere_{telescope}_{channel}_filtered_telescope_all_time_all_bmap.fits\"\n",
+    ", (0,1,2))"
    ]
   },
   {
@@ -260,8 +274,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert np.nanmax(output_map) < 1e-3 and np.nanmax(output_map) > 1e-5, \\\n",
-    "    \"Amplitude check failed\""
+    "output_map[np.isnan(output_map)] = hp.UNSEEN"
    ]
   },
   {
@@ -270,8 +283,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert np.nanmin(output_map) > -1e-4 and np.nanmin(output_map) < 1e-6, \\\n",
-    "    \"Amplitude check failed\""
+    "# Compare mask\n",
+    "np.testing.assert_allclose(input_map == hp.UNSEEN, output_map == hp.UNSEEN)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.testing.assert_allclose(input_map[input_map != hp.UNSEEN] * \\\n",
+    "    np.sqrt(10 * simulations_observing_efficiency[site.lower()][telescope] / (7 * 365.25 * .2) / 2),\n",
+    "    output_map[output_map != hp.UNSEEN], rtol=1e-6)"
    ]
   },
   {
