test: update tests to latest changes

--- a/04_cli.ipynb
+++ b/04_cli.ipynb
@@ -318,7 +318,7 @@
    "outputs": [],
    "source": [
     "output_map, header = hp.read_map(\n",
-    "    \"output/cmbs4_sky_atmosphere_noise_KCMB_SAT-LFS1_nside512_1_of_1.fits\", (0,1,2),\n",
+    "    \"output/SAT-LFS1_pole/cmbs4_sky_atmosphere_noise_KCMB_SAT-LFS1_pole_nside512_1_of_1.fits\", (0,1,2),\n",
     "h=True)"
    ]
   },
@@ -348,7 +348,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.nanmin(output_map[1]), np.nanmax(output_map[1])"
+    "np.min(output_map[1][output_map[1] != hp.UNSEEN]), np.max(output_map[1])"
    ]
   },
   {
@@ -357,7 +357,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert np.nanmin(output_map[1]) > -1e-2 and np.nanmax(output_map[1]) < 1e-2, \\\n",
+    "assert np.min(output_map[1][output_map[1] != hp.UNSEEN]) > -1e-2 and np.max(output_map[1]) < 1e-2, \\\n",
     "    \"Amplitude check failed\""
    ]
   },
@@ -376,7 +376,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hp.mollview(output_map[1], min=-1e-3, max=1e-3, unit=\"K\", title=\"Total Q\")"
+    "hp.mollview(output_map[1], min=-1e-5, max=1e-5, unit=\"K\", title=\"Total Q\")"
    ]
   },
   {
@@ -385,8 +385,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hp.mollview(output_map[2], min=-1e-3, max=1e-3, unit=\"K\", title=\"Total U\")"
+    "hp.mollview(output_map[2], min=-1e-5, max=1e-5, unit=\"K\", title=\"Total U\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
