Add warning about partial delensing in docs and ui
Closes #6

--- a/05_ui.ipynb
+++ b/05_ui.ipynb
@@ -121,7 +121,9 @@
     "CMB lensed - CMB unlensed:\n",
     "* 1 for lensed CMB\n",
     "* 0 for unlensed CMB\n",
-    "* `>0, <1` for residual after de-lensing"
+    "* `>0, <1` for residual after de-lensing\n",
+    "\n",
+    "For the case of partial de-lensing, consider that lensing is a non-linear and this is a very rough approximation, still it could be useful in same cases, for example low-ell BB modes."
    ]
   },
   {
