feat: remove tag from the filename template

--- a/04_cli.ipynb
+++ b/04_cli.ipynb
@@ -120,7 +120,7 @@
     "        \"\"\"\n",
     "        self.config_filename = config_filename\n",
     "        self.config = toml.load(self.config_filename)\n",
-    "        self.output_filename_template = \"cmbs4_{tag}_KCMB_{telescope}-{band}_{site}_nside{nside}_{split}_of_{nsplits}.fits\"\n",
+    "        self.output_filename_template = \"cmbs4_KCMB_{telescope}-{band}_{site}_nside{nside}_{split}_of_{nsplits}.fits\"\n",
     "        self.output_folder = Path(output_folder)\n",
     "        self.output_folder.mkdir(parents=True, exist_ok=True)\n",
     "\n",
@@ -163,7 +163,6 @@
     "                        telescope=telescope,\n",
     "                        band=channel,\n",
     "                        site=site.lower(),\n",
-    "                        tag=\"sky_atmosphere_noise\",\n",
     "                        split=max(1, split),  # split=0 is full mission and we want 1\n",
     "                        nsplits=1 if split == 0 else nsplits,\n",
     "                    )\n",
