feat: support include_atmosphere and include_noise flags

--- a/04_cli.ipynb
+++ b/04_cli.ipynb
@@ -169,12 +169,16 @@
     "                    if os.path.exists(subfolder / output_filename):\n",
     "                        log.info(\"File %s already exists, SKIP\", output_filename)\n",
     "                        continue\n",
-    "                    output_map = load_atmosphere(\n",
-    "                        self.config, site, channel, realization=split\n",
-    "                    )\n",
-    "                    output_map += load_noise(\n",
-    "                        self.config, site, channel, realization=split\n",
-    "                    )\n",
+    "\n",
+    "                    output_map = np.zeros_like(sky_emission)\n",
+    "                    if self.config.get(\"include_atmosphere\", True):\n",
+    "                        output_map += load_atmosphere(\n",
+    "                            self.config, site, channel, realization=split\n",
+    "                        )\n",
+    "                    if self.config.get(\"include_noise\", True):\n",
+    "                        output_map += load_noise(\n",
+    "                            self.config, site, channel, realization=split\n",
+    "                        )\n",
     "                    if split > 0:\n",
     "                        output_map *= np.sqrt(nsplits)\n",
     "                    output_map += sky_emission\n",
