feat: log if we skip atmo or noise

--- a/04_cli.ipynb
+++ b/04_cli.ipynb
@@ -175,10 +175,16 @@
     "                        output_map += load_atmosphere(\n",
     "                            self.config, site, channel, realization=split\n",
     "                        )\n",
+    "                    else:\n",
+    "                        log.info(\"Skip the atmosphere noise\")\n",
+    "\n",
     "                    if self.config.get(\"include_noise\", True):\n",
     "                        output_map += load_noise(\n",
     "                            self.config, site, channel, realization=split\n",
     "                        )\n",
+    "                    else:\n",
+    "                        log.info(\"Skip the instrument noise\")\n",
+    "\n",
     "                    if split > 0:\n",
     "                        output_map *= np.sqrt(nsplits)\n",
     "                    output_map += sky_emission\n",
