fix naming of full mission

--- a/04_cli.ipynb
+++ b/04_cli.ipynb
@@ -139,7 +139,9 @@
     "        write_outputs : bool\n",
     "            if True write the outputs to disk, if False return them (not implemented yet)\n",
     "        \"\"\"\n",
-    "        nsplits = self.config[\"experiment\"].get(\"number_of_splits\", 1)\n",
+    "        nsplits = self.config[\"experiment\"].get(\"number_of_splits\", 0)\n",
+    "        if nsplits == 1:\n",
+    "            nsplits = 0\n",
     "        assert (\n",
     "            nsplits < 8\n",
     "        ), \"We currently only have 7 independent realizations of atmosphere and noise\"\n",
