--- a/04_cli.ipynb
+++ b/04_cli.ipynb
@@ -153,6 +153,7 @@
     "                telescope = get_telescope(channel)\n",
     "                subfolder = self.output_folder / f\"{telescope}-{channel}_{site.lower()}\"\n",
     "                subfolder.mkdir(parents=True, exist_ok=True)\n",
+    "                log.info(\"Created output folder %s\", str(subfolder))\n",
     "\n",
     "                log.info(f\"Simulate channel {channel} at {site}\")\n",
     "                sky_emission = load_sky_emission(\n",
