need experiment subsection

--- a/04_cli.ipynb
+++ b/04_cli.ipynb
@@ -174,14 +174,14 @@
     "                        continue\n",
     "\n",
     "                    output_map = np.zeros_like(sky_emission)\n",
-    "                    if self.config.get(\"include_atmosphere\", True):\n",
+    "                    if self.config[\"experiment\"].get(\"include_atmosphere\", True):\n",
     "                        output_map += load_atmosphere(\n",
     "                            self.config, site, channel, realization=split\n",
     "                        )\n",
     "                    else:\n",
     "                        log.info(\"Skip the atmosphere noise\")\n",
     "\n",
-    "                    if self.config.get(\"include_noise\", True):\n",
+    "                    if self.config[\"experiment\"].get(\"include_noise\", True):\n",
     "                        output_map += load_noise(\n",
     "                            self.config, site, channel, realization=split\n",
     "                        )\n",
