printout base folder

--- a/03_noise.ipynb
+++ b/03_noise.ipynb
@@ -241,6 +241,7 @@
     "        Path(f\"{realization:08d}\")\n",
     "        / f\"{site.lower()}_noise_{telescope}_{channel}_filtered_telescope_all_time_all_bmap.fits\"\n",
     "    )\n",
+    "    log.info(f\"Base folder: {base_folder}\")\n",
     "    log.info(f\"Reading {map_filename}\")\n",
     "    output_map = hp.read_map(\n",
     "        Path(base_folder) / map_filename, (0, 1, 2), dtype=None, verbose=False\n",
