fix: correct module name

--- a/04_hitmap_wcov.ipynb
+++ b/04_hitmap_wcov.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# default_exp noise"
+    "# default_exp hitmap_wcov"
    ]
   },
   {
