--- a/04_hitmap_wcov.ipynb
+++ b/04_hitmap_wcov.ipynb
@@ -75,20 +75,19 @@
     "    output_map : numpy array\n",
     "        Output map with all emissions combined, uses nan for missing pixels\n",
     "    \"\"\"\n",
-    "    \n",
+    "\n",
     "    # it is the same scaling for hitmap and white noise covariance matrix,\n",
     "    # which is the same as noise except squared\n",
-    "    \n",
+    "\n",
     "    telescope = get_telescope(channel)\n",
-    "    \n",
+    "\n",
     "    scaling = (365.25 * config[\"experiment\"][\"observing_efficiency\"]) / (\n",
-    "        10\n",
-    "        * simulations_observing_efficiency[site.lower()].get(telescope, 1)\n",
+    "        10 * simulations_observing_efficiency[site.lower()].get(telescope, 1)\n",
     "    )\n",
     "    scaling *= get_tube_years(config, site, channel)\n",
     "    # focal plane thinning factor of TOD simulations\n",
     "    scaling *= get_thinfp(channel)\n",
-    "    \n",
+    "\n",
     "    map_filename = (\n",
     "        Path(f\"{realization:08d}\")\n",
     "        / f\"{site.lower()}_noise_{telescope}_{channel}_filtered_telescope_all_time_all_hmap.fits\"\n",
@@ -99,17 +98,15 @@
     "    )\n",
     "    log.info(f\"Base folder: {base_folder}\")\n",
     "    log.info(f\"Reading {map_filename}\")\n",
-    "    hitmap = hp.read_map(\n",
-    "        Path(base_folder) / map_filename, 0, dtype=None, verbose=False\n",
-    "    )\n",
+    "    hitmap = hp.read_map(Path(base_folder) / map_filename, 0, dtype=None, verbose=False)\n",
     "    wcov = hp.read_map(\n",
-    "        Path(base_folder) / wcov_filename, (0,1,2,3,4,5), dtype=None, verbose=False\n",
+    "        Path(base_folder) / wcov_filename, (0, 1, 2, 3, 4, 5), dtype=None, verbose=False\n",
     "    )\n",
     "    hitmap[hitmap == hp.UNSEEN] = 0\n",
     "    # input map is 10 days at 100% efficiency\n",
     "    hitmap = np.round(hitmap * scaling).astype(np.int64)\n",
     "    wcov /= scaling\n",
-    "    wcov[:, hitmap==0] = hp.UNSEEN\n",
+    "    wcov[:, hitmap == 0] = hp.UNSEEN\n",
     "    return hitmap, wcov"
    ]
   },
