fix: use experiment duration from configuration file

--- a/04_hitmap_wcov.ipynb
+++ b/04_hitmap_wcov.ipynb
@@ -225,7 +225,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sampling_rate = hitmap.sum() / (5 * config[\"experiment\"][\"observing_efficiency\"])\n",
+    "sampling_rate = hitmap.sum() / (config[\"experiment\"][\"total_experiment_length_years\"] * config[\"experiment\"][\"observing_efficiency\"])\n",
     "sampling_rate /= 365.25 * 24 * 3600\n",
     "sampling_rate /= 8438 # HF detectors per tube\n",
     "sampling_rate /= num_tubes"
