test with input hitmap

--- a/04_hitmap_wcov.ipynb
+++ b/04_hitmap_wcov.ipynb
@@ -225,6 +225,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "sampling_rate = input_map.sum() \n",
+    "sampling_rate /= 10 * 24 * 3600 * simulations_observing_efficiency[site.lower()][telescope]\n",
+    "sampling_rate /= 8438 # HF detectors per tube\n",
+    "sampling_rate *= 8 # focal plane thinning factor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "simulations_observing_efficiency[site.lower()][telescope]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sampling_rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "sampling_rate = hitmap.sum() / (config[\"experiment\"][\"total_experiment_length_years\"] * config[\"experiment\"][\"observing_efficiency\"])\n",
     "sampling_rate /= 365.25 * 24 * 3600\n",
     "sampling_rate /= 8438 # HF detectors per tube\n",
