Take into account turnarounds in efficiency
See #9

--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -52,7 +52,8 @@
     "# export\n",
     "\n",
     "simulations_observing_efficiency = dict(\n",
-    "    pole=dict(SAT=46.29 / 100, LAT=37.23 / 100), chile=dict()\n",
+    "    pole=dict(SAT=0.3931149305555555, LAT=0.321544537037037),\n",
+    "    chile=dict(SAT=0.8656164351851852, LAT=0.917306712962963),\n",
     ")"
    ]
   },
