feat: correct for sampling

--- a/04_hitmap_wcov.ipynb
+++ b/04_hitmap_wcov.ipynb
@@ -47,6 +47,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Simulations are executed at lower sampling frequency:\n",
+    "\n",
+    "* $20~Hz$ for SAT (production is $100~Hz$)\n",
+    "* $200~Hz$ for LAT (production is $400~Hz$)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "simulations_sampling_frequency_scaling = dict(SAT=5, LAT=2)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -105,6 +126,7 @@
     "    hitmap[hitmap == hp.UNSEEN] = 0\n",
     "    # input map is 10 days at 100% efficiency\n",
     "    hitmap = np.round(hitmap * scaling).astype(np.int64)\n",
+    "    hitmap *= simulations_sampling_frequency_scaling[telescope]\n",
     "    wcov /= scaling\n",
     "    wcov[:, hitmap == 0] = hp.UNSEEN\n",
     "    return hitmap, wcov"
